// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CTCartToEEBasketMapper mapAdjustedBasketToCartDirectDiscounts should return the direct discount draft 1`] = `[]`;

exports[`CTCartToEEBasketMapper mapAdjustedBasketToItemDirectDiscounts should return the direct discount drafts 1`] = `
[
  {
    "target": {
      "predicate": "sku="SKU123"",
      "type": "lineItems",
    },
    "value": {
      "money": [
        {
          "centAmount": 10,
          "currencyCode": "USD",
          "fractionDigits": 2,
          "type": "centPrecision",
        },
      ],
      "type": "absolute",
    },
  },
]
`;

exports[`CTCartToEEBasketMapper mapAdjustedBasketToShippingDirectDiscounts should return the direct discount drafts 1`] = `
[
  {
    "target": {
      "type": "shipping",
    },
    "value": {
      "money": [
        {
          "centAmount": 10,
          "currencyCode": "USD",
          "fractionDigits": 2,
          "type": "centPrecision",
        },
      ],
      "type": "absolute",
    },
  },
]
`;

exports[`CTCartToEEBasketMapper mapCartLineItemsToBasketContent should return the mapped line items 1`] = `
[
  {
    "description": "Product 1",
    "itemUnitCost": 1000,
    "itemUnitCount": 2,
    "itemUnitMetric": "EACH",
    "salesKey": "SALE",
    "totalUnitCost": 2000,
    "totalUnitCostAfterDiscount": 2000,
    "upc": "SKU123",
  },
]
`;

exports[`CTCartToEEBasketMapper mapCartToWalletOpenPayload should include voucher codes (tokens) if present in the cart 1`] = `
{
  "basket": {
    "contents": [
      {
        "description": "Example Product",
        "itemUnitCost": 300,
        "itemUnitCount": 1,
        "itemUnitMetric": "EACH",
        "salesKey": "SALE",
        "totalUnitCost": 300,
        "totalUnitCostAfterDiscount": 300,
        "upc": "SKU123",
      },
    ],
    "summary": {
      "redemptionChannel": "Online",
      "totalBasketValue": 300,
      "totalDiscountAmount": {
        "general": null,
        "promotions": 0,
        "staff": null,
      },
      "totalItems": 1,
    },
    "type": "STANDARD",
  },
  "examine": [
    {
      "type": "TOKEN",
      "value": "12345678",
    },
  ],
  "identity": undefined,
  "location": {
    "incomingIdentifier": "outlet1",
    "parentIncomingIdentifier": "banner1",
  },
  "lock": true,
  "options": {
    "adjustBasket": {
      "enabled": true,
      "includeOpenOffers": true,
    },
    "analyseBasket": {
      "enabled": true,
      "includeOpenOffers": true,
    },
  },
  "reference": undefined,
}
`;

exports[`CTCartToEEBasketMapper mapCartToWalletOpenPayload should return the payload for /wallet/open 1`] = `
{
  "basket": {
    "contents": [
      {
        "description": "Example Product",
        "itemUnitCost": 300,
        "itemUnitCount": 1,
        "itemUnitMetric": "EACH",
        "salesKey": "SALE",
        "totalUnitCost": 300,
        "totalUnitCostAfterDiscount": 300,
        "upc": "SKU123",
      },
    ],
    "summary": {
      "redemptionChannel": "Online",
      "totalBasketValue": 300,
      "totalDiscountAmount": {
        "general": null,
        "promotions": 0,
        "staff": null,
      },
      "totalItems": 1,
    },
    "type": "STANDARD",
  },
  "examine": undefined,
  "identity": undefined,
  "location": {
    "incomingIdentifier": "outlet1",
    "parentIncomingIdentifier": "banner1",
  },
  "lock": true,
  "options": {
    "adjustBasket": {
      "enabled": true,
      "includeOpenOffers": true,
    },
    "analyseBasket": {
      "enabled": true,
      "includeOpenOffers": true,
    },
  },
  "reference": undefined,
}
`;

exports[`CTCartToEEBasketMapper mapCartToWalletOpenPayload should return the payload for /wallet/open, without the optional parentIncomingIdentifier when not set in the configuration 1`] = `
{
  "basket": {
    "contents": [
      {
        "description": "Example Product",
        "itemUnitCost": 300,
        "itemUnitCount": 1,
        "itemUnitMetric": "EACH",
        "salesKey": "SALE",
        "totalUnitCost": 300,
        "totalUnitCostAfterDiscount": 300,
        "upc": "SKU123",
      },
    ],
    "summary": {
      "redemptionChannel": "Online",
      "totalBasketValue": 300,
      "totalDiscountAmount": {
        "general": null,
        "promotions": 0,
        "staff": null,
      },
      "totalItems": 1,
    },
    "type": "STANDARD",
  },
  "examine": undefined,
  "identity": undefined,
  "location": {
    "incomingIdentifier": "outlet1",
  },
  "lock": true,
  "options": {
    "adjustBasket": {
      "enabled": true,
      "includeOpenOffers": true,
    },
    "analyseBasket": {
      "enabled": true,
      "includeOpenOffers": true,
    },
  },
  "reference": undefined,
}
`;

exports[`CTCartToEEBasketMapper mapShippingMethodSkusToBasketItems should return the mapped custom basket items 1`] = `
{
  "description": "Example Shipping Discount",
  "itemUnitCost": 300,
  "itemUnitCount": 1,
  "itemUnitMetric": "EACH",
  "salesKey": "SALE",
  "totalUnitCost": 300,
  "totalUnitCostAfterDiscount": 300,
  "upc": "245879",
}
`;

exports[`CTCartToEEBasketMapper mapVoucherCodesToCampaignTokens should return an array of tokens to be examined 1`] = `
[
  {
    "type": "TOKEN",
    "value": "12345678",
  },
]
`;
